--- a/outcome-curr-mgmt/pom.xml
+++ b/outcome-curr-mgmt/pom.xml
@@ -37,9 +37,15 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>-->
+        <dependency>
+            <groupId>com.oracle.database.jdbc</groupId>
+            <artifactId>ojdbc8</artifactId>
+            <version>19.8.0.0</version> <!-- Ensure this version is compatible with your Oracle DB -->
             <scope>runtime</scope>
         </dependency>
         <dependency>
